--- a/rzdapp/.env
+++ b/rzdapp/.env
@@ -4,4 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="file:./db.sqlite"
+
+# Для NextAuth (если вы используете библиотеку для аутентификации)
+NEXTAUTH_SECRET="your-secret-key"
+
+# Настройки для хэшей паролей или сессий (если необходимо)
+# SALT_ROUNDS=10
