--- a/rzdapp/package.json
+++ b/rzdapp/package.json
@@ -11,23 +11,27 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "cookie": "^1.0.2",
     "next": "13.5.6",
     "next-auth": "^4.24.10",
-    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^1.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sqlite3": "^3.1.11",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
