--- a/rzdapp/package.json
+++ b/rzdapp/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
