--- a/rzdapp/package.json
+++ b/rzdapp/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
