--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
