--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "next": "13.5.6",
     "next-auth": "^4.24.10",
     "react": "^18",
